<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">

    <TextView
        android:text="@string/target_weight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textViewTarget"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:fontFamily="sans-serif"
        android:typeface="normal"
        android:textSize="24sp"
        android:textAlignment="viewStart"
        android:paddingBottom="10dp"
        android:textStyle="normal|bold" />

    <TextView
        android:text="@string/bmi_ranges"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textViewBMIRanges"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:padding="5dp"
        android:textStyle="normal|bold"
        android:textSize="18sp" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:id="@+id/RadioGroupRange">

        <RadioButton
            android:text="@string/range1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radioButton1"
            android:layout_weight="1"
            android:checked="true"/>

        <RadioButton
            android:text="@string/range2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radioButton2"
            android:layout_weight="1" />

        <RadioButton
            android:text="@string/range3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radioButton3"
            android:layout_weight="1" />

        <RadioButton
            android:text="@string/range4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radioButton4"
            android:layout_weight="1" />
    </RadioGroup>

    <TextView
        android:text="@string/height_heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textViewHeight"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:fontFamily="serif"
        android:padding="5dp"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="43dp">

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/editTextFeet"
            android:layout_weight="1"
            android:inputType="number" />

        <TextView
            android:text="@string/feet"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:id="@+id/textViewFeet"
            android:layout_weight="1"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="42dp">

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/editTextInches"
            android:layout_weight="0.57" />

        <TextView
            android:text="@string/inches"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textViewInches"
            android:layout_weight="1"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />
    </LinearLayout>

    <Button
        android:text="@string/calc_weight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/buttonCalculateWeight"
        android:layout_gravity="center_horizontal"
        android:padding="20dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textViewResult"
        android:layout_weight="0.77"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:gravity="center_horizontal"
        android:layout_gravity="center_horizontal"/>

</LinearLayout>